syntax = "proto3";

package sf.filecoin.type.v1;

option go_package = "github.com/chainsafe/firehose-filecoin/pb/sf/filecoin/type/v1;pbfilecoin";

message Tipset {
  uint64 height = 1;
  uint64 block_count = 2;
  uint64 timestamp = 3;
  string tipset_key = 4;
  optional string parent_tipset_key = 5;
}
